--- a/templates/owner/booking_details.html
+++ b/templates/owner/booking_details.html
@@ -247,7 +247,7 @@
                             
                             <!-- View homestay link -->
                             <div class="text-center mt-4">
-                                <a href="{{ url_for('owner.manage_rooms', homestay_id=booking.homestay_id) }}" class="btn btn-outline-primary">
+                                <a href="{{ url_for('owner.dashboard') }}" class="btn btn-outline-primary">
                                     <i class="bi bi-door-open me-1"></i>
                                     Manage rooms
                                 </a>
