--- a/templates/base.html
+++ b/templates/base.html
@@ -264,13 +264,8 @@
                     {% if current_user.is_authenticated %}
                         {% if current_user.is_owner() %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('owner.profile') }}" style="color: #333333;">
-                                    <i class="bi bi-person-circle me-1"></i><span data-translate="profile">Hồ sơ</span>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('owner.dashboard') }}" style="color: #333333;">
-                                    <i class="bi bi-speedometer2 me-1"></i><span data-translate="admin">Quản trị viên</span>
+                                <a class="nav-link" href="{{ url_for('owner.view_bookings') }}" style="color: #333333;">
+                                    <i class="bi bi-calendar-check me-1"></i><span data-translate="booking-management">Quản lý đặt phòng</span>
                                 </a>
                             </li>
                         {% endif %}
