--- a/templates/owner/book_room.html
+++ b/templates/owner/book_room.html
@@ -7,8 +7,8 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{{ url_for('owner.dashboard') }}" data-translate="dashboard">Dashboard</a></li>
-      <li class="breadcrumb-item"><a href="{{ url_for('owner.manage_homestays') }}" data-translate="manage-homestays">Manage Homestays</a></li>
-      <li class="breadcrumb-item"><a href="{{ url_for('owner.manage_rooms', homestay_id=homestay.id) }}">{{ homestay.title }}</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('owner.dashboard') }}" data-translate="manage-homestays">Manage Homestays</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('owner.dashboard') }}">{{ homestay.title }}</a></li>
       <li class="breadcrumb-item active" data-translate="book-room">Book Room</li>
     </ol>
   </nav>
